--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
-    "autoprefixer": "^10.4.20",
     "cookies-next": "^5.0.2",
+    "hamburger-react": "^2.5.2",
     "js-cookie": "^3.0.5",
     "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hamburger-drawer": "^21.11.27",
     "react-hook-form": "^7.54.2",
+    "tailwind-hamburgers": "^1.3.5",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8.4.49",
