--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "clsx": "^2.1.1",
     "cookies-next": "^5.0.2",
+    "framer-motion": "^11.18.0",
     "hamburger-react": "^2.5.2",
     "js-cookie": "^3.0.5",
     "next": "^15.1.3",
@@ -19,6 +21,7 @@
     "react-hamburger-drawer": "^21.11.27",
     "react-hook-form": "^7.54.2",
     "tailwind-hamburgers": "^1.3.5",
+    "tailwind-merge": "^2.6.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
