--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "cookies-next": "^5.0.2",
     "framer-motion": "^11.18.0",
     "hamburger-react": "^2.5.2",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hamburger-drawer": "^21.11.27",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.3",
     "tailwind-hamburgers": "^1.3.5",
     "tailwind-merge": "^2.6.0",
+    "toastify-js": "^1.12.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
