--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
+    "sweetalert2": "^11.16.1",
     "tailwind-hamburgers": "^1.3.5",
     "tailwind-merge": "^2.6.0",
     "toastify-js": "^1.12.0",
