--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "clsx": "^2.1.1",
     "cookies-next": "^5.0.2",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.0",
     "hamburger-react": "^2.5.2",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "next": "^15.1.3",
     "react": "^19.0.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^19.0.0",
     "react-hamburger-drawer": "^21.11.27",
     "react-hook-form": "^7.54.2",
