--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tailwind-hamburgers": "^1.3.5",
     "tailwind-merge": "^2.6.0",
     "toastify-js": "^1.12.0",
+    "winston": "^3.17.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
